--- a/experience.html
+++ b/experience.html
@@ -10,9 +10,9 @@
     </head>
     <body>
       <div id="nav"><ul>
-            <li><a href="indexl.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="education.html">Education</a></li>
-            <li><a href="Employment.html">Employment</a></li>
+            <li><a href="employment.html">Employment</a></li>
             <li><a href="experience.html">Experience</a></li>
           </ul></div>
    
